Auth by api gateway

--- a/InvoicingMicroservice/appsettings.json
+++ b/InvoicingMicroservice/appsettings.json
@@ -7,6 +7,9 @@
         }
     },
     "AllowedHosts": "*",
+    "ApplicationOptions": {
+        "Whitelist": [ "127.0.0.1", "::1" ]
+    },
     "ConnectionStrings": {
         "DefaultConnection": "host=localhost;port=5432;database=Invoicing;username=postgres;password=admin"
     }
