--- a/InvoicingMicroservice/Properties/launchSettings.json
+++ b/InvoicingMicroservice/Properties/launchSettings.json
@@ -4,13 +4,14 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:9067",
-      "sslPort": 0
+      "sslPort": 44341
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
