--- a/InvoicingMicroservice/appsettings.json
+++ b/InvoicingMicroservice/appsettings.json
@@ -3,13 +3,11 @@
         "LogLevel": {
             "Default": "Information",
             "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Microsoft.EntityFrameworkCore.Database.Command": "Information"
         }
     },
-    "AllowedHosts": "*",
-    "ApplicationOptions": {
-        "Whitelist": [ "127.0.0.1", "::1", "20.40.202.31" ]
-    },
+    "AllowedHosts": "localhost;edp-gateway.azurewebsites.net;edp-invoicing.azurewebsites.net;cow.rmq2.cloudamqp.com",
     "RabbitMq": {
         "Host": "rabbitmq://cow.rmq2.cloudamqp.com/qffyjgbt",
         "Username": "qffyjgbt",
