--- a/InvoicingMicroservice/appsettings.json
+++ b/InvoicingMicroservice/appsettings.json
@@ -7,8 +7,7 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*",
-  //"AllowedHosts": "localhost;edp-gateway.azurewebsites.net;edp-invoicing.azurewebsites.net;cow.rmq2.cloudamqp.com",
+  "AllowedHosts": "localhost;edp-gateway.azurewebsites.net;edp-invoicing.azurewebsites.net;cow.rmq2.cloudamqp.com",
   "RabbitMq": {
     "Host": "rabbitmq://cow.rmq2.cloudamqp.com/qffyjgbt",
     "Username": "qffyjgbt",
